# iJiegeOS

./: .gitignore  Cargo.toml  Makefile  README-CN.md  README.md  build-nginx.sh  build-static-nginx.sh  libcrypto3-riscv64.apk  libssl3-riscv64.apk  musl-riscv64.apk  nginx-riscv64.apk  pcre2-riscv64.apk  run  rust-toolchain.toml  test_hello.c
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  linker.ld  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: console.rs  entry.S  epoll.rs  fs.rs  heap.rs  initramfs.rs  lang_items.rs  loader.rs  main.rs  net.rs  plic.rs  sbi.rs  syscall.rs  syscall_impl.rs  task.rs  timer.rs  virtio_hal.rs
kernel/src/arch/: mod.rs
kernel/src/arch/riscv64/: linker.ld  mod.rs  sbi.rs
kernel/src/arch/riscv64/boot/: entry.asm
kernel/src/arch/riscv64/mm/: mod.rs
kernel/src/arch/riscv64/trap/: mod.rs  trap.asm
kernel/src/drivers/: mod.rs  virtio.rs
kernel/src/fs/: devfs.rs  inode.rs  mod.rs  pipe.rs  procfs.rs  socket.rs  tmpfs.rs  vfs.rs
kernel/src/mm/: address.rs  frame.rs  heap.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/net/: mod.rs
kernel/src/signal/: mod.rs
kernel/src/sync/: mod.rs
kernel/src/syscall/: epoll.rs  file.rs  memory.rs  misc.rs  mod.rs  network.rs  process.rs  signal.rs  time.rs
kernel/src/task/: context.rs  manager.rs  mod.rs  pid.rs  scheduler.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
nginx-extracted/: .PKGINFO  .SIGN.RSA.alpine-devel@lists.alpinelinux.org-60ac2099.rsa.pub
rootfs/: init
rootfs/etc/: group  passwd
src/: config.rs  console.rs  main.rs
(+43 files in other folders)
