[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
riscv = { version = "0.11", features = ["critical-section-single-hart"] }
spin = "0.9"
bitflags = "2.0"
log = { version = "0.4", default-features = false }
buddy_system_allocator = "0.9"
smoltcp = { version = "0.11", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "log",
    "alloc",
] }
xmas-elf = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
virtio-drivers = "0.7"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
